SERVER-42312 disallow validate cmd during rollback and recovering states