src/mongo/db/commands/validate.cpp
@@ -97,6 +97,10 @@ public:
         return true;
     }
 
+    bool maintenanceOk() const override {
+        return false;
+    }
+
     virtual void addRequiredPrivileges(const std::string& dbname,
                                        const BSONObj& cmdObj,
                                        std::vector<Privilege>* out) const {
